edited the picture contents based on the pages

--- a/Photography.html
+++ b/Photography.html
@@ -133,33 +133,33 @@
             <div class="col-sm-10 offset-2" style="display: block; padding-top: 30px;">
 
                 <div class="row">
-                    <img src="assets\images\basket.jpeg" alt="Ermias Asmare Profile image">
-                    <img src="assets\images\food1.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\football.jpeg" alt="Ermias Asmare Profile image">
-                    <img src="assets\images\boxing.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\skate.jpeg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p1.jpg" alt="Ermias Asmare Profile image">
+                    <img src="assets\images\p2.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p3.jpg" alt="Ermias Asmare Profile image">
+                    <img src="assets\images\p4.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p5.jpg" alt="Ermias Asmare Profile image" >
                 </div>
                 <div class="row" style="padding-top: 5px;" >
-                    <img src="assets\images\football.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure2.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\skate.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure4.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\pizza.jpeg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\ph1.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\ph2.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p6.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p7.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p12.jpg" alt="Ermias Asmare Profile image" > 
                 </div>
 
                 <div class="row" style="padding-top: 5px;" >
-                    <img src="assets\images\adventure3.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure1.jpeg" alt="Ermias Asmare Profile image" > 
-                    <img src="assets\images\food.jpeg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p8.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\m2.jpg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\m4.jpg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\i7.jpg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\i8.jpg" alt="Ermias Asmare Profile image" >
                 </div>
                 <div class="row" style="padding-top: 5px;" >
-                    <img src="assets\images\20200220_184231.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\20200220_184240.jpg" alt="Ermias Asmare Profile image" > 
-                    <img src="assets\images\profile.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\the_alchemist.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\passenger-let-her-go.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\m1.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\m5.jpg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\m3.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\m6.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i9.jpg" alt="Ermias Asmare Profile image" >
                 </div>
                
             </div>
