--- a/about.html
+++ b/about.html
@@ -140,32 +140,32 @@
 
                 </div>
                 <div class="row">
-                    <img src="assets\images\football.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure2.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\skate.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure4.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\pizza.jpeg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\i1.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i2.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i7.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i3.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\friends1.jpg" alt="Ermias Asmare Profile image" > 
                 </div>
                 <div class="row">
-                    <img src="assets\images\adventure3.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure1.jpeg" alt="Ermias Asmare Profile image" > 
-                    <img src="assets\images\food.jpeg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\insta1.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i9.jpg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\i6.jpg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\i7.jpg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\i8.jpg" alt="Ermias Asmare Profile image" >
                 </div>
                 <div class="row">
-                    <img src="assets\images\20200220_184231.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\20200220_184240.jpg" alt="Ermias Asmare Profile image" > 
-                    <img src="assets\images\profile.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\the_alchemist.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\passenger-let-her-go.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p5.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p6.jpg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\p4.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\p8.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\m4.jpg" alt="Ermias Asmare Profile image" >
                             
                 </div>
                 <div class="row">
-                    <img src="assets\images\20200220_184231.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i4.jpg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\20200220_184240.jpg" alt="Ermias Asmare Profile image" > 
                     <img src="assets\images\profile.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\the_alchemist.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i11.jpg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\passenger-let-her-go.jpg" alt="Ermias Asmare Profile image" >
                             
                 </div>
