--- a/Hobbies.html
+++ b/Hobbies.html
@@ -133,32 +133,35 @@
 
                 <div class="row">
                     <img src="assets\images\basket.jpeg" alt="Ermias Asmare Profile image">
-                    <img src="assets\images\food1.jpeg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\football.jpeg" alt="Ermias Asmare Profile image">
                     <img src="assets\images\boxing.jpeg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\skate.jpeg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\surfing.jpg" alt="Ermias Asmare Profile image" >
+
                 </div>
                 <div class="row" style="padding-top: 5px;" >
-                    <img src="assets\images\football.jpeg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\adventure2.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\skate.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure4.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\pizza.jpeg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\adventure3.jpeg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\adventare7.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\adventare6.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\adventare1.jpg" alt="Ermias Asmare Profile image" >
+                    
                 </div>
 
                 <div class="row" style="padding-top: 5px;" >
-                    <img src="assets\images\adventure3.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\adventure1.jpeg" alt="Ermias Asmare Profile image" > 
+                    <img src="assets\images\pizza.jpeg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\food.jpeg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\i7.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\i8.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\food1.jpeg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\food2.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\food3.jpg" alt="Ermias Asmare Profile image" >
+
                 </div>
                 <div class="row" style="padding-top: 5px;" >
-                    <img src="assets\images\20200220_184231.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\cross.jpg" alt="Ermias Asmare Profile image" >
                     <img src="assets\images\20200220_184240.jpg" alt="Ermias Asmare Profile image" > 
                     <img src="assets\images\profile.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\the_alchemist.jpg" alt="Ermias Asmare Profile image" >
-                    <img src="assets\images\passenger-let-her-go.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i3.jpg" alt="Ermias Asmare Profile image" >
+                    <img src="assets\images\i1.jpg" alt="Ermias Asmare Profile image" >
                 </div>
                
             </div>
