--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </div>
           <div class="p-2 flex-fill bd-highlight">
             <img
-              src="assets\images\the_alchemist.jpg"
+              src="assets\images\food3.jpg"
               alt="Ermias Asmare Profile image"
               height="245.99px"
               width="245.99px"
